@@ -18,10 +18,6 @@ class PyramidTemplate(Template):
         misnamings (such as naming a package "site" or naming a package
         logger "root".
         """
-        if vars['package'] == 'site':
-            raise ValueError('Sorry, you may not name your package "site". '
-                             'The package name "site" has a special meaning in '
-                             'Python.  Please name it anything except "site".')
         vars['random_string'] = native_(binascii.hexlify(os.urandom(20)))
         package_logger = vars['package']
         if package_logger == 'root':
