@@ -8,12 +8,17 @@ import os.path
 import pkg_resources
 import re
 import sys
+from pyramid.compat import input_
 
 _bad_chars_re = re.compile('[^a-zA-Z0-9_]')
 
 def main(argv=sys.argv, quiet=False):
     command = PCreateCommand(argv, quiet)
-    return command.run()
+    try:
+        return command.run()
+    except KeyboardInterrupt: # pragma: no cover
+        return 1
+
 
 class PCreateCommand(object):
     verbosity = 1 # required
@@ -52,6 +57,13 @@ class PCreateCommand(object):
                       dest='interactive',
                       action='store_true',
                       help='When a file would be overwritten, interrogate')
+    parser.add_option('--ignore-conflicting-name',
+                      dest='force_bad_name',
+                      action='store_true',
+                      default=False,
+                      help='Do create a project even if the chosen name '
+                           'is the name of an already existing / importable '
+                           'package.')
 
     pyramid_dist = pkg_resources.get_distribution("pyramid")
 
@@ -69,25 +81,19 @@ class PCreateCommand(object):
                 self.out('')
                 self.show_scaffolds()
             return 2
-        if not self.options.scaffold_name:
-            self.out('You must provide at least one scaffold name: -s <scaffold name>')
-            self.out('')
-            self.show_scaffolds()
+
+        if not self.validate_input():
             return 2
-        if not self.args:
-            self.out('You must provide a project name')
-            return 2
-        available = [x.name for x in self.scaffolds]
-        diff = set(self.options.scaffold_name).difference(available)
-        if diff:
-            self.out('Unavailable scaffolds: %s' % list(diff))
-            return 2
+
         return self.render_scaffolds()
 
-    def render_scaffolds(self):
-        options = self.options
-        args = self.args
-        output_dir = os.path.abspath(os.path.normpath(args[0]))
+    @property
+    def output_path(self):
+        return os.path.abspath(os.path.normpath(self.args[0]))
+
+    @property
+    def project_vars(self):
+        output_dir = self.output_path
         project_name = os.path.basename(os.path.split(output_dir)[1])
         pkg_name = _bad_chars_re.sub(
             '', project_name.lower().replace('-', '_'))
@@ -111,17 +117,22 @@ class PCreateCommand(object):
             else:
                 pyramid_docs_branch = 'latest'
 
-        vars = {
+        return {
             'project': project_name,
             'package': pkg_name,
             'egg': egg_name,
             'pyramid_version': pyramid_version,
             'pyramid_docs_branch': pyramid_docs_branch,
-            }
-        for scaffold_name in options.scaffold_name:
+        }
+
+
+    def render_scaffolds(self):
+        props = self.project_vars
+        output_dir = self.output_path
+        for scaffold_name in self.options.scaffold_name:
             for scaffold in self.scaffolds:
                 if scaffold.name == scaffold_name:
-                    scaffold.run(self, output_dir, vars)
+                    scaffold.run(self, output_dir, props)
         return 0
 
     def show_scaffolds(self):
@@ -153,6 +164,49 @@ class PCreateCommand(object):
     def out(self, msg): # pragma: no cover
         if not self.quiet:
             print(msg)
+
+    def validate_input(self):
+        if not self.options.scaffold_name:
+            self.out('You must provide at least one scaffold name: -s <scaffold name>')
+            self.out('')
+            self.show_scaffolds()
+            return False
+        if not self.args:
+            self.out('You must provide a project name')
+            return False
+        available = [x.name for x in self.scaffolds]
+        diff = set(self.options.scaffold_name).difference(available)
+        if diff:
+            self.out('Unavailable scaffolds: %s' % ", ".join(sorted(diff)))
+            return False
+
+        pkg_name = self.project_vars['package']
+
+        if pkg_name == 'site' and not self.options.force_bad_name:
+            self.out('The package name "site" has a special meaning in '
+                     'Python. Are you sure you want to use it as your '
+                     'project\'s name?')
+            return self.confirm_bad_name('Really use "{0}"?: '.format(pkg_name))
+
+        # check if pkg_name can be imported (i.e. already exists in current
+        # $PYTHON_PATH, if so - let the user confirm
+        pkg_exists = True
+        try:
+            __import__(pkg_name, globals(), locals(), [], 0) # use absolute imports
+        except ImportError as error:
+            pkg_exists = False
+        if not pkg_exists:
+            return True
+
+        if self.options.force_bad_name:
+            return True
+        self.out('A package named "{0}" already exists, are you sure you want '
+                 'to use it as your project\'s name?'.format(pkg_name))
+        return self.confirm_bad_name('Really use "{0}"?: '.format(pkg_name))
+
+    def confirm_bad_name(self, prompt): # pragma: no cover
+        answer = input_('{0} [y|N]: '.format(prompt))
+        return answer.strip().lower() == 'y'
 
 if __name__ == '__main__': # pragma: no cover
     sys.exit(main() or 0)
